--- a/week1_solutions/index.html
+++ b/week1_solutions/index.html
@@ -17,7 +17,7 @@
             Black Hat Hackers
         </div>
         <p>
-            The term “black hat” originated from Western movies, where the bad guys wore black hats and the good guys wore white hats.[1]
+            The term “black hat” originated from Western movies, where the bad guys wore black hats and the good guys wore white hats.
 
 A black-hat hacker is an individual who attempts to gain unauthorized entry into a system or network to exploit them for malicious reasons. The black-hat hacker does not have any permission or authority to compromise their targets. They try to inflict damage by compromising security systems, altering functions of websites and networks, or shutting down systems. They often do so to steal or gain access to passwords, financial information, and other personal data.
         </p>
